--- a/sass/woocommerce-rtl/_general.scss
+++ b/sass/woocommerce-rtl/_general.scss
@@ -144,6 +144,22 @@
 		}
 	}
 
+	.woocommerce-ordering {
+		.ordering-selector-wrapper {
+			.north-icon-previous {
+				float: left;
+				margin: 0 10px 0 -3px;
+
+				@include transform( rotate(0deg) );
+				@include transition (all 0.15s ease-in);
+			}
+
+			&:hover .north-icon-previous {
+				@include transform( rotate(-90deg) );
+			}
+		}
+	}
+
 	// Buttons
 	a.button,
 	button.button,
