--- a/sass/woocommerce/_archives.scss
+++ b/sass/woocommerce/_archives.scss
@@ -54,7 +54,8 @@
 				position: absolute;
 				width: 100%;
 				top: 0;
-				left: -99999px;
+				opacity: 0;
+				visibility: hidden;
 
 				li {
 					cursor: pointer;
@@ -80,6 +81,7 @@
 			&:hover {
 				.ordering-dropdown {
 					opacity: 1;
+					visibility: visible;
 					left: auto;
 					@include transform( scale(1) );
 				}
