--- a/woocommerce.css
+++ b/woocommerce.css
@@ -53,7 +53,8 @@
       position: absolute;
       width: 100%;
       top: 0;
-      left: -99999px;
+      opacity: 0;
+      visibility: hidden;
       opacity: 0;
       -webkit-transition: all 0.15s ease-in;
       -moz-transition: all 0.15s ease-in;
@@ -78,6 +79,7 @@
           color: #292929; }
     .woocommerce .woocommerce-ordering .ordering-selector-wrapper:hover .ordering-dropdown {
       opacity: 1;
+      visibility: visible;
       left: auto;
       -webkit-transform: scale(1);
       -moz-transform: scale(1);
